[gd_scene load_steps=3 format=3 uid="uid://cd1q37552u3rc"]

[ext_resource type="Script" uid="uid://c5ddrgag8i6bc" path="res://scripts/pause_menu.gd" id="1_m0p7e"]
[ext_resource type="Theme" uid="uid://x7oq2df01ga5" path="res://esc.tres" id="2_ux4mk"]

[node name="pause_menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_m0p7e")

[node name="bg_overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.254902)

[node name="menu_holder" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(3, 5)

[node name="resume_btn" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("2_ux4mk")
text = "Continuar"

[node name="menu_btn" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("2_ux4mk")
text = "Voltar para menu"

[node name="quit_btn" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("2_ux4mk")
text = "Sair do jogo"

[connection signal="pressed" from="menu_holder/resume_btn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="menu_holder/menu_btn" to="." method="_on_menu_btn_pressed"]
[connection signal="pressed" from="menu_holder/quit_btn" to="." method="_on_quit_btn_pressed"]
